# autopilot-compositional-testing

./: .bazelrc  .gitignore  README.md  WORKSPACE  requirements.txt  setup_python.sh
data/policy/caution/autoware/: ve=10.0.json  ve=15.0.json
map_data/: BUILD.bazel
map_data/apollo/: crossing_with_traffic_lights-40.txt  crossing_with_traffic_lights.txt  crossing_with_yield_signs-40.txt  crossing_with_yield_signs.txt  lane_change-40.txt  lane_change.txt  merging-40.txt  merging.txt
map_data/carla/: crossing_with_traffic_lights-30.xodr  crossing_with_traffic_lights.xodr  crossing_with_yield_signs-30.xodr  crossing_with_yield_signs.xodr  lane_change.xodr  merging-30.xodr  merging.xodr
patch/apollo/bridge/: bashrc  patch.py  requirements.txt
patch/apollo/bridge/bridge_client/: client.py  dreamview.py  vehicle.py
patch/apollo/bridge/bridge_common/: network_lib.py  vehicle_state.py  world_model.py
patch/apollo/bridge/cyber_compatibility/: __init__.py  node.py
patch/apollo/bridge/scripts/: clean_log.sh  client.sh  import_map.sh  kill_all.sh
patch/apollo/docker_script/: dev_into.sh  dev_start.sh
patch/autoware/autoware_map/main-map/: crossing_with_traffic_lights.osm  crossing_with_traffic_lights.sh  crossing_with_yield_signs.osm  crossing_with_yield_signs.sh  lane_change.osm  lane_change.sh  merging.osm  merging.sh
patch/autoware/config/v1/: settings.json
patch/autoware/config/v2/: settings.json
patch/autoware/config/v3/: settings.json
patch/autoware/config/v4/: settings.json
patch/autoware/workspace/: setup.sh  start.sh
patch/autoware/workspace/client/: autoware_vehicle_state.py  autoware_world_state.py  bridge_client.py  guard_dashboard.py  message.py  vehicle.py
patch/autoware/workspace/patch/: modified_autoware.rviz  rviz.sh
patch/autoware/workspace/scripts/: build.sh  check_map.sh  client.sh  guard_dashboard.sh  restart_dashboard.sh  rviz_debug.sh  start_auto_mode.sh  start_dashboard.sh  start_rviz.sh  timer.sh  trajectory_visualizer.sh
script/: pull_autoware.sh  run_autoware.sh  run_batch.sh  run_fast_search.sh  run_single.sh  show.sh  start_server.sh  switch_autoware_map.sh
script/run_test_case/: BUILD.bazel  common.py  dashboard.py  run_batch.py  run_single.py  show.py  web_ui.py
src/common/algorithm/sequence_solver/: BUILD.bazel  sequence_solver.py  sequence_solver_test.py
src/common/libs/apollo/map/parser/: BUILD.bazel  __init__.py  parser.py
src/common/types/: BUILD.bazel  __init__.py  types.py
src/dashboard/: server.py
src/dynamics/: BUILD.bazel  __init__.py  apollo_dynamics.py  autoware_dynamics.py  carla_dynamics.py  common.py  experimental_dynamics.py  lgsvl_dynamics.py
src/oracle/apollo/: crossing_with_traffic_lights.py  crossing_with_yield_signs.py  merging.py
src/oracle/autoware/: BUILD.bazel  crossing_with_traffic_lights.py  crossing_with_yield_signs.py  merging.py
src/oracle/behavior/: merging.py
src/oracle/carla/: BUILD.bazel  crossing_with_traffic_lights.py  crossing_with_yield_signs.py  lane_change.py
src/oracle/lgsvl/: crossing_with_traffic_lights.py  lane_change.py
src/semantic_model/geometry/: BUILD.bazel
src/semantic_model/map/hd_map/: BUILD.bazel  __init__.py  hd_map.py
src/semantic_model/map/hd_map/component/: lane.py  section.py  static_object.py
src/semantic_model/map/hd_map/proto/: hd_map.proto
src/semantic_model/system_run/: BUILD.bazel  __init__.py  system_run.py
src/semantic_model/system_run/algorithm/dynamic_algorithm/: BUILD.bazel  __init__.py  dynamic_algorithm.py
src/semantic_model/system_run/proto/: system_run.proto
src/semantic_model/system_state/: BUILD.bazel
src/semantic_model/system_state/algorithm/metric_algorithm/: BUILD.bazel  __init__.py  metric_algorithm.py
src/semantic_model/system_state/component/: __init__.py
src/semantic_model/system_state/component/dynamic/: __init__.py  traffic_light_state.py  vehicle_state.py
src/semantic_model/system_state/component/static/: __init__.py
src/semantic_model/system_state/component/static/metric_graph/: __init__.py  metric_graph.py
src/semantic_model/system_state/component/static/metric_graph/component/: edge.py  junction.py  node.py  road.py
src/semantic_model/system_state/component/static/static_object/: __init__.py  static_object.py
src/semantic_model/system_state/component/static/static_scene/: __init__.py  static_scene.py
src/semantic_model/system_state/proto/: dynamic_state.proto  metric_graph.proto  static_object.proto  static_scene.proto
src/simulator/adapter/apollo/: BUILD.bazel  crossing_with_traffic_lights.py  crossing_with_yield_signs.py  lane_change.py  merging.py
src/simulator/adapter/vista_util/: BUILD.bazel  __init__.py  apollo_hd_map_transformer.py
src/simulator/apollo/: BUILD.bazel  __init__.py  apollo_vehicle_state.py  apollo_world_model.py  config.json  config.py  message.py  server.py  simulator.py
src/simulator/autoware/: BUILD.bazel  __init__.py  autoware_simulator.py  autoware_vehicle_state.py  autoware_world_model.py  message.py  server.py
src/simulator/carla/: BUILD.bazel  __init__.py  carla_manager.py  carla_runner.py
src/simulator/context/: BUILD.bazel  context.py
src/test_data_generator/: BUILD.bazel  apollo_fast_search.py  behavior_fast_search.py  critical_value.py  finely_tuned_xe.py  generator.py
src/visual_oracle/apollo/: BUILD.bazel  lane_change.py
src/visual_oracle/autoware/: BUILD.bazel  lane_change.py  merging.py
src/visual_oracle/lgsvl/: crossing_with_yield_signs.py  merging.py
test_case/: apollo_crossing_with_traffic_lights.json  apollo_crossing_with_yield_signs.json  apollo_lane_change.json  apollo_merging.json  autoware_crossing_with_traffic_lights.json  autoware_crossing_with_yield_signs.json  autoware_lane_change.json  autoware_merging.json  carla_crossing_with_traffic_lights.json  carla_crossing_with_yield_signs.json  carla_lane_change.json  carla_merging.json  lgsvl_crossing_with_traffic_lights.json  lgsvl_crossing_with_yield_signs.json  lgsvl_lane_change.json  lgsvl_merging.json  remove_dumplicated.py
typings/carla/: __init__.pyi
(+149 files in other folders)
