py_binary(
    name = "apollo_fast_search",
    srcs = ["apollo_fast_search.py"],
)

py_binary(
    name = "behavior_fast_search",
    srcs = ["behavior_fast_search.py"],
)

py_binary(
    name = "generator",
    srcs = ["generator.py"],
)

py_binary(
    name = "critical_value",
    srcs = ["critical_value.py"],
    deps = [
        "//src/dynamics",
    ],
)

py_binary(
    name = "finely_tuned_xe",
    srcs = ["finely_tuned_xe.py"],
)