load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "system_run_py_pb2",
    srcs = ["proto/system_run.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/semantic_model/system_state:dynamic_state_py_pb2",
        "//src/semantic_model/system_state:static_scene_py_pb2",
    ],
)

py_library(
    name = "system_run_lib",
    srcs = [
        "system_run.py",
    ],
    deps = [
        ":system_run_py_pb2",
        "//src/common/types",
    ],
)

py_library(
    name = "system_run",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":system_run_lib"],
)
