load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "dynamic_state_py_pb2",
    srcs = ["proto/dynamic_state.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/semantic_model/geometry:geometry_py_pb2",
    ],
)

py_proto_library(
    name = "metric_graph_py_pb2",
    srcs = ["proto/metric_graph.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/semantic_model/geometry:geometry_py_pb2",
        "//src/semantic_model/map/common:map_common_py_pb2",
    ],
)

py_proto_library(
    name = "static_object_py_pb2",
    srcs = ["proto/static_object.proto"],
    visibility = ["//visibility:public"],
    deps = ["//src/semantic_model/map/common:map_common_py_pb2"],
)

py_proto_library(
    name = "static_scene_py_pb2",
    srcs = ["proto/static_scene.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":metric_graph_py_pb2",
        ":static_object_py_pb2",
    ],
)

py_library(
    name = "metric_graph",
    srcs = [
        "component/static/metric_graph/__init__.py",
        "component/static/metric_graph/component/edge.py",
        "component/static/metric_graph/component/junction.py",
        "component/static/metric_graph/component/node.py",
        "component/static/metric_graph/component/road.py",
        "component/static/metric_graph/metric_graph.py",
    ],
    deps = [
        ":metric_graph_py_pb2",
        "//src/common/types",
        "//src/semantic_model/geometry",
    ],
)

py_library(
    name = "dynamic_component",
    srcs = [
        "component/dynamic/__init__.py",
        "component/dynamic/traffic_light_state.py",
        "component/dynamic/vehicle_state.py",
    ],
)

py_library(
    name = "static_component",
    srcs = [
        "component/static/__init__.py",
        "component/static/static_object/__init__.py",
        "component/static/static_object/static_object.py",
        "component/static/static_scene/__init__.py",
        "component/static/static_scene/static_scene.py",
    ],
    deps = [":metric_graph"],
)

py_library(
    name = "component",
    srcs = ["component/__init__.py"],
    deps = [
        ":dynamic_component",
        ":metric_graph",
        ":static_component",
    ],
)

py_library(
    name = "system_state",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":component",
    ],
)
