py_library(
    name = "parser_lib",
    srcs = ["parser.py"],
    deps = [
        "//src/common/libs/apollo/map/proto:map_py_pb2",
        "//src/common/types",
    ],
)

py_library(
    name = "parser",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":parser_lib"],
)
